Prevent gaps in card boxes when using floated elements
Self-clear boxes to make sure the box background spans the whole
element even when there is not enough content or multiple floated
elements are placed in a sequence.

REDMINE-20384

--- a/entry_types/scrolled/package/src/frontend/foregroundBoxes/CardBoxWrapper.module.css
+++ b/entry_types/scrolled/package/src/frontend/foregroundBoxes/CardBoxWrapper.module.css
@@ -24,6 +24,25 @@
   z-index: -1;
 }
 
+.selfClear-left::after,
+.selfClear-right::after,
+.selfClear-both::after {
+  content: '';
+  display: block;
+}
+
+.selfClear-left::after {
+  clear: left;
+}
+
+.selfClear-right::after {
+  clear: right;
+}
+
+.selfClear-both::after {
+  clear: both;
+}
+
 .cardStart {
   margin-top: 3em;
 }
